--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="page-header">
+        <nav class="navigation-page">
+            <a class="logo" href="./index.html"><span class="text-violet">Web</span>Studio</a>
+            <ul class="menu">
+                <li class="menu-item"><a class="menu-link" href="">Studio</a></li>
+                <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
+                <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
@@ -96,7 +96,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"><span class="text-violet">Web</span>Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
