--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
                 <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="contacts">
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="contacts-item"><a class="contacts-link"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
