added styles for h1 and button

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions
+        <section class="first-section">
+            <h1 class="page-title">Effective Solutions
                 for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button class="btn" type="button">Order Service</button>
         </section>
         <section>
             <h2>Advantages</h2>
