--- a/index.html
+++ b/index.html
@@ -42,98 +42,102 @@
                 for Your Business</h1>
             <button class="btn" type="button">Order Service</button>
         </section>
-        <section>
-            <h2>Advantages</h2>
+        <section class="second-section">
+            <h2 class="second-title">Advantages</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <h3 class="third-title">Strategy</h3>
+                    <p class="text-discrib">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="third-title">Punctuality</h3>
+                    <p class="text-discrib">Bring the key message to the brand's audience for the best price within the
+                        shortest possible
                         time.
                     </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <h3 class="third-title">Diligence</h3>
+                    <p class="text-discrib">Research and confirm brands that present the strongest digital growth
+                        opportunities and minimize
                         risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="third-title">Technologies</h3>
+                    <p class="text-discrib">Design practice focused on digital experiences. We bring forth a deep
+                        passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
+        <section class="third-section">
+            <h2 class="second-title">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="third-title">Mark Guerrero</h3>
+                    <p class="text-discrib">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="third-title">Tom Ford</h3>
+                    <p class="text-discrib">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="third-title">Camila Garcia</h3>
+                    <p class="text-discrib">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="third-title">Daniel Wilson</h3>
+                    <p class="text-discrib">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Our Portfolio</h2>
+            <h2 class="second-title">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="third-title">Banking App</h3>
+                    <p class="text-discrib">App</p>
                 </li>
                 <li>
                     <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="third-title">Cashless Payment</h3>
+                    <p class="text-discrib">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="third-title">Meditation App</h3>
+                    <p class="text-discrib">App</p>
                 </li>
                 <li>
                     <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="third-title">Taxi Service</h3>
+                    <p class="text-discrib">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360" height="300">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="third-title">Screen Illustrations</h3>
+                    <p class="text-discrib">Design</p>
                 </li>
                 <li>
                     <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="third-title">Online Courses</h3>
+                    <p class="text-discrib">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a class="logo" href="./index.html"><span class="text-violet">Web</span>Studio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="page-footer">
+        <a class="logo-footer" href="./index.html"><span class="text-violet">Web</span>Studio</a>
+        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </footer>
 </body>
 
