--- a/index.html
+++ b/index.html
@@ -76,29 +76,29 @@
         <section class="third-section">
             <h2 class="second-title">Our Team</h2>
             <ul>
-                <li>
+                <li class="third-section-item">
                     <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3 class="third-title">Mark Guerrero</h3>
                     <p class="text-discrib">Product Designer</p>
                 </li>
-                <li>
+                <li class="third-section-item">
                     <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
                     <h3 class="third-title">Tom Ford</h3>
                     <p class="text-discrib">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="third-section-item">
                     <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
                     <h3 class="third-title">Camila Garcia</h3>
                     <p class="text-discrib">Marketing</p>
                 </li>
-                <li>
+                <li class="third-section-item">
                     <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3 class="third-title">Daniel Wilson</h3>
                     <p class="text-discrib">UI Designer</p>
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="fourth-section">
             <h2 class="second-title">Our Portfolio</h2>
             <ul>
                 <li>
