--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
     <header class="page-header">
         <nav class="navigation-page">
-            <a class="logo" href="./index.html"><span class="text-violet">Web</span>Studio</a>
+            <a class="logo" href="./index.html">Web<Studio class="text-new-color">Studio</span></a>
             <ul class="menu">
-                <li class="menu-item"><a class="menu-link" href="">Studio</a></li>
+                <li class="menu-item"><a class="menu-link" href="./index.html">Studio</a></li>
                 <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
                 <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
             </ul>
@@ -135,7 +135,7 @@
         </section>
     </main>
     <footer class="page-footer">
-        <a class="logo-footer" href="./index.html"><span class="text-violet">Web</span>Studio</a>
+        <a class="logo-footer" href="./index.html">Web<Studio class="text-white-color">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </footer>
